# Banana

./: CMakeLists.txt  ConcurrentHashMap.h  ConcurrentRingBuffer.h  Connection.cpp  Connection.h  EventReactor.h  IndependentTask.cpp  IndependentTask.h  InteractiveTask.cpp  InteractiveTask.h  License  Message.cpp  Message.h  MessageCenter.cpp  MessageCenter.h  README.md  Service.cpp  Service.h  ServiceManager.cpp  ServiceManager.h  Task.h  ThreadPool.cpp  ThreadPool.h  WaitFreeConcurrentRingBuffer.h  main.cpp  目标与特点.txt  要求与特点.txt
cmake/: CMakeLists.txt
codecs/: HttpCodec.cpp  HttpCodec.h  JsonCodec.cpp  JsonCodec.h  ProtobufCodec.cpp  ProtobufCodec.h  RtmpCodec.cpp  RtmpCodec.h  XmlCodec.cpp  XmlCodec.h
examples/: Client.cpp  Client.h  LibeventObj.cpp  LibeventObj.h  LibeventReactor.cpp  LibeventReactor.h  NetAcceptService.cpp  NetAcceptService.h  NetService.cpp  NetService.h  NetWorkerService.cpp  NetWorkerService.h  NewConnectMessage.h  StorageMessage.h  StorageServer.cpp  StorageService.cpp  StorageService.h  Stream.cpp  Stream.h  StringMessage.h  StringStreamParser.cpp  StringStreamParser.h
examples/ConcurrenceEchoServer/: ConcurrenceEchoServer.cpp  ConcurrenceEchoServer.h  ConcurrentConnection.cpp  ConcurrentConnection.h
examples/ConcurrenceSimulateServer/: ClientConnection.cpp  ClientConnection.h  ConcurrenceSimulateServer.cpp  ConcurrenceSimulateServer.h
examples/MapReduceServer/: BenchmarkTest.cpp  MapDoneConnectionMessage.h  MapReduceConnection.cpp  MapReduceConnection.h  MapReduceServer.cpp  MapTask.h
examples/StorageServer/: StorageMessage.h  StorageServer.cpp  StorageService.h  StringMessage.h
multi-threading/: ConcurrentRingBuffer.h  IndependentTask.cpp  IndependentTask.h  InteractiveTask.cpp  InteractiveTask.h  Message.h  MessageCenter.cpp  ServiceManager.h  Task.h  ThreadPool.cpp  ThreadPool.h
network/: Connection.cpp  Connection.h  ConnectionMessage.h  Connector.cpp  Connector.h  EventReactor.cpp  EventReactor.h  LibeventReactor.cpp  LibeventReactor.h  NetAcceptService.cpp  NetAcceptService.h  NetWorkService.cpp  NetWorkService.h  NetWorkerService.cpp  NetWorkerService.h  NewConnectMessage.h  SelectEventReactor.cpp  SelectEventReactor.h  Stream.cpp  Stream.h  StreamParser.h  StringStream.cpp  StringStream.h  TcpServer.cpp  TcpServer.h
utils/: Utils.cpp  Utils.h
