cmake_minimum_required(VERSION 3.4)
project(SeviceFramework)
add_definitions(-g -lpthread -std=c++11)

#set(CMAKE_CXX_STANDARD 11)
aux_source_directory(.. SRC)
include_directories(..)
include_directories(../../glog/src/glog)
include_directories(../../libevent/include)
include_directories(../../libevent/build/include)
link_directories(../../glog/.libs/)
link_directories(../../libevent/build/lib)
link_libraries(libglog.a -ldl -lpthread)
link_libraries(libevent.a)

add_executable(SeviceFramework ${SRC} ../Task.h ../InteractiveTask.cpp ../IndependentTask.cpp ../ConcurrentHashMap.h ../examples/NetService.cpp ../examples/NetService.h ../network/LibeventReactor.cpp ../network/LibeventReactor.h ../network/StringStream.cpp ../network/StringStream.h ../network/EventReactor.cpp ../network/EventReactor.h ../network/Connection.cpp ../network/Connection.h ../network/StreamParser.h ../network/SelectEventReactor.cpp ../network/SelectEventReactor.h ../examples/StringMessage.h ../network/TcpServer.cpp ../network/TcpServer.h ../examples/StorageServer.cpp ../examples/StorageService.cpp ../examples/StorageService.h ../examples/StorageMessage.h)