cmake_minimum_required(VERSION 3.4)
project(ServiceFramework)
add_definitions(-g -lpthread -std=c++11)

#set(CMAKE_CXX_STANDARD 11)
aux_source_directory(.. SRC)
include_directories(..)
include_directories(../../glog/src/glog)
include_directories(../../libevent/include)
include_directories(../../libevent/build/include)
link_directories(../../glog/.libs/)
link_directories(../../libevent/build/lib)
link_libraries(libglog.a -ldl -lpthread)
link_libraries(libevent.a)

add_executable(MapReduceServer ${SRC} ../multi-threading/Task.h ../multi-threading/InteractiveTask.cpp ../multi-threading/IndependentTask.cpp ../multi-threading/ConcurrentHashMap.h ../network/NetAcceptService.cpp ../network/NetAcceptService.h ../network/LibeventReactor.cpp ../network/LibeventReactor.h ../network/Stream.cpp ../network/Stream.h ../network/EventReactor.h ../network/Connection.cpp ../network/Connection.h ../network/SelectEventReactor.cpp ../network/SelectEventReactor.h ../examples/StorageServer/StringMessage.h ../network/TcpServer.cpp ../network/TcpServer.h ../network/NetWorkService.cpp ../network/NetWorkService.h ../examples/MapReduceServer/MapReduceServer.cpp ../examples/MapReduceServer/MapReduceConnection.cpp ../examples/MapReduceServer/MapReduceConnection.h ../network/ConnectionMessage.h ../examples/MapReduceServer/MapTask.h ../examples/MapReduceServer/MapDoneConnectionMessage.h)
add_executable(StorageServer ${SRC} ../multi-threading/Task.h ../multi-threading/InteractiveTask.cpp ../multi-threading/IndependentTask.cpp ../multi-threading/ConcurrentHashMap.h ../network/NetAcceptService.cpp ../network/NetAcceptService.h ../network/LibeventReactor.cpp ../network/LibeventReactor.h ../network/Stream.cpp ../network/Stream.h ../network/EventReactor.h ../network/Connection.cpp ../network/Connection.h ../network/SelectEventReactor.cpp ../network/SelectEventReactor.h ../examples/StorageServer/StringMessage.h ../network/TcpServer.cpp ../network/TcpServer.h ../network/NetWorkService.cpp ../network/NetWorkService.h ../examples/MapReduceServer/MapReduceServer.cpp ../examples/MapReduceServer/MapReduceConnection.cpp ../examples/MapReduceServer/MapReduceConnection.h ../network/ConnectionMessage.h ../examples/MapReduceServer/MapTask.h)