cmake_minimum_required(VERSION 3.4)
project(ServiceFramework CXX C)
add_definitions(-g -lpthread -std=c++11)

aux_source_directory(../examples/MapReduceServer SRC_MAP_REDUCE_SERVER)
aux_source_directory(../examples/StorageServer SRC_STORAGE_SERVER)
aux_source_directory(../multi-threading SRC_MUTI_THREADING)
aux_source_directory(../network SRC_NETWORK)
aux_source_directory(../utils SRC_UTILS)

include_directories(..)
include_directories(../..)
include_directories(../../glog/src/glog)
include_directories(../../libevent/include)
include_directories(../../libevent/build/include)
link_directories(../../glog/.libs/)
link_directories(../../libevent/build/lib)
link_libraries(libglog.a -ldl -lpthread)
link_libraries(libevent.a)

add_executable(BenchmarkTest ../examples/MapReduceServer/BenchmarkTest.cpp ../examples/ConcurrenceSimulateServer/ConcurrenceSimulateServer.cpp)
add_executable(MapReduceServer ${SRC_NETWORK} ${SRC_MUTI_THREADING} ${SRC_UTILS} ../examples/MapReduceServer/MapReduceServer.cpp ../examples/MapReduceServer/MapReduceConnection.cpp ../examples/MapReduceServer/MapReduceConnection.h ../examples/MapReduceServer/MapTask.h ../examples/MapReduceServer/MapDoneConnectionMessage.h ../network/Connector.h)
#add_executable(StorageServer ${SRC_STORAGE_SERVER} ${SRC_NETWORK} ${SRC_MUTI_THREADING} ${SRC_UTILS})